# genAI-enterprise-agent

./: .gitignore  CLAUDE.md  Implementation.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: _runtime.py  coordinator.py  crm_agent.py  data_agent.py  devops_agent.py  docs_agent.py  health.py
data/: trace_manifest.json
data/docs/: architecture-ingestion-pipeline.md  incident-2026-07-12-ingestion-failure.md  runbook-05-deployment-quality-gates.md  runbook-12-schema-mismatch.md
data/mock/: crm.json  databricks.json  devops.json
deploy/: .env.example  agentfield.yaml  docker-compose.yml
docs/: AGENTFIELD.md  MidTerm_Submission_Reference.md  RFP-DOC-S4-I-24.docx  RFP-DOC-S4-I-24.md  RFP_Proposal_Sample_Model_ParticipantsV2.docx  RFP_Proposal_Sample_Model_ParticipantsV2.md  RFP_Solution_Proposal_Psiog_Kendra.docx  approach1-agentfield-hub-spoke.excalidraw  approach2-azure-serverless.excalidraw  pSiddhi3_0_MidTerm_Submission_Template.docx  pSiddhi3_0_MidTerm_Submission_Template.md  solution-proposal.md  solution_proposal.pptx  use-case.md
docs/qa/: README.md  e-13-qa-summary.md  e-14-tests-coverage.md  e-15-rag-index.md  e-16-control-plane.md  q01.md  q02.md  q03.md  q04.md  q05.md  q06.md  q07.md  q08.md  q09.md  q10.md  traces.md
psiog_kendra/: app.py  cli.py  config.py  coordinator.py  domains.py  index_docs.py  llm.py  prompting.py  schemas.py
psiog_kendra/qa/: evidence.py  judge.py  report.py  test_queries.py
psiog_kendra/rag/: chunker.py  (+2 more)
scripts/: build_proposal_docx.py  qa_summary.py  trace_queries.py
tests/: conftest.py
(+21 files in other folders)
