[project]
name = "psiog-kendra"
version = "0.1.0"
description = "Psiog Kendra - GenAI-powered multi-agent Enterprise Copilot (RFP S4-I-24)"
requires-python = ">=3.11"
dependencies = [
    "agentfield>=0.1.107",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
kendra = "psiog_kendra.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["psiog_kendra*", "agents*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["psiog_kendra"]
omit = ["*/cli.py"]
